# Console_RPG

./: .gitignore  CMakeLists.txt  README.md
data/: obj_0_0.txt
maps/: map_0_-1.txt  map_0_0.txt  map_1_0.txt
source/: main.cpp
src/: main.cpp
